fix: pan-43 Expand/collapse control shows the wrong state

--- a/prisma/prisma-cloud/blocks/sidenav/sidenav.css
+++ b/prisma/prisma-cloud/blocks/sidenav/sidenav.css
@@ -574,7 +574,7 @@
   transform: rotate(-90deg);
 } */
 
-.pan-sidenav .toc-books li.current .icon-toggle svg,
+/* .pan-sidenav .toc-books li.current .icon-toggle svg, */
 .pan-sidenav .toc-books li[aria-expanded="true"] > div > .icon-toggle svg {
   transform: rotate(180deg);
 }
